--- a/Asteroid Dodge.csproj
+++ b/Asteroid Dodge.csproj
@@ -46,16 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Asteroid.cs" />
+    <Compile Include="Asteroid Dodge.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Asteroid Dodge.Designer.cs">
+      <DependentUpon>Asteroid Dodge.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Spaceship.cs" />
+    <EmbeddedResource Include="Asteroid Dodge.resx">
+      <DependentUpon>Asteroid Dodge.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -103,6 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\playgame2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Spaceship.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
